--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,32 @@
 
     font-family: 'Inter', sans-serif;
 }
+
+#blue-link{
+    text-decoration: none;
+    margin-top: 5vh;
+}
+
+.loader-container{
+    display: grid;
+    place-items: center;
+    height: 100vh;
+    background: white;
+    border-radius: 4px;
+  }
+
+.loader {
+    border: 16px solid #000;
+    border-top: 16px solid #fff;
+    border-radius: 50%;
+
+    width: 130px;
+    height: 130px;
+
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0%  { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
