--- a/frontend/src/pages/SubscriptionPage/SubscriptionPage.css
+++ b/frontend/src/pages/SubscriptionPage/SubscriptionPage.css
@@ -5,3 +5,12 @@
     margin-left: 22vw;
     margin-top: 8vh;
 }
+
+@media(max-width: 600px){
+    #wrapper{
+        display: flex;
+        text-align: center;
+        margin-left: 10vw;
+        margin-top: 8vh;
+    }
+}
