--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,14 @@
     animation: spin 2s linear infinite;
 }
 
+button{
+    cursor: pointer;
+}
+
+Link{
+    cursor: pointer;
+}
+
 @keyframes spin {
     0%  { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
